--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
             <div><img src="./images/holiday_code3.JPG" alt="Holiday Code"></div>
         </div>
 
-        <p id="c-sharp-para">
+        <p class="c-sharp-para">
             The C# examination was one of hardest exams I've done in all my years of education. Despite being well prepared, it was unlike any other
             exam I've ever sat. Throughout the module, we became accustomed with classes, methods and functions. We worked through for loops, arrays
             and if statements. The funny thing is, we've only scratched the surface of this hugely powerful language. In semester 2, we delve further
@@ -76,9 +76,9 @@
     <h3>Principles of ICT Systems and Data Security</h3>
     <div class="data-slide">
 
-        <iframe width="600" height="450" src="https://www.youtube.com/embed/EIq0J7Sr7eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe  src="https://www.youtube.com/embed/EIq0J7Sr7eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-        <p>
+        <p class="data">
             Whilst not a programming module per se, I found this module hugely beneficial on many fronts. Discussing areas surrounding
             malware, encryption and data security is not only beneficial for work place environments, but also in every day aspects of our lives.
             As a class, we were afforded the opportunity to work together and make presentations on various topics. My classmate Bryan Donnelly and
