Top Button, Comments

--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,7 @@
         <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
         <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
 
+        <input id="scrollToTop" type="button" value="Top">
         <p>
             © Andrew English 2019. All rights reserved.
         </p>
