--- a/education.html
+++ b/education.html
@@ -121,7 +121,7 @@
 
     <div class="book-pub">
         <h1>Book Publication</h1>
-        <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1"> <img class="myBook" src="./images/e_book.jpg" alt="Aindriu Inglis Book Cover"></a>
+        <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1" target="_blank"> <img class="myBook" src="./images/e_book.jpg" alt="Aindriu Inglis Book Cover"></a>
 
         <p>
             My MA in political science specialised in Nationalism and Ethnic Conflict. This course enabled me to study revolutionary groups, paramilitary organisations 
@@ -141,6 +141,7 @@
         <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
         <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
 
+        <input id="scrollToTop" type="button" value="Top">
         <p>
             © Andrew English 2019. All rights reserved.
         </p>
