--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@
         <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
         <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
         <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
-
+        
+        <input id="scrollToTop" type="button" value="Top">
         <p> 
             © Andrew English 2019. All rights reserved.
         </p>
     </div>  
 
+
+   
 
 
     <script src="./libs/jquery.js"></script>
