All Target Blank added

--- a/contact.html
+++ b/contact.html
@@ -80,9 +80,9 @@
         </p>
     </div>
 
-    <script src="./libs/jquery.js"></script>
-    <script src="./libs/parsley.js"></script>
-    <script src="./scripts/script.js"></script>
+    <script src="./libs/jquery.js" target="_blank"></script>
+    <script src="./libs/parsley.js" target="_blank"></script>
+    <script src="./scripts/script.js" target="_blank"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
