--- a/education.html
+++ b/education.html
@@ -51,7 +51,7 @@
 
 
     <div class="undergrad-uni">
-        <a href="https://www.ucd.ie/"><img src="./images/ucd.png" alt="UCD"></a>
+        <a href="https://www.ucd.ie/" target="_blank"><img src="./images/ucd.png" alt="UCD"></a>
         <p>
             Before my escapades into the world of technology, I had a previous life of study and education. After completing my Leaving Cert
             in 2011, I entered University College Dublin at 17 where I studied history, politics and international relations for the
@@ -128,7 +128,7 @@
             and conflict regions in more detail. As part of my course work, I had to write a 15,000 word dissertation. My piece focused
             primarily on the IRA and the Troubles in Northern Ireland. As you can see from my results table, I received an A- for my
             efforts. After a short period of time, my dissertation was picked up by <a href="https://www.bookhubpublishing.com/"> Book Hub Publishing</a> based
-            in Co. Galway. The picture above is the cover for my <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1">eBook</a> 
+            in Co. Galway. The picture above is the cover for my <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1" target="_blank" >eBook</a> 
             which is available to buy on Amazon.
         </p>
 
@@ -137,9 +137,9 @@
 
 
     <div class="bottom-navbar">
-        <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
-        <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
-        <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+        <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+        <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
+        <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
 
         <input id="scrollToTop" type="button" value="Top">
         <p>
