--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Andrew's Personal Page</title>
-    <!-- TODO: Add Meta Description -->
-    <!-- TODO: Add Meta Keywords -->
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./images/favicon.ico">
 </head>
@@ -47,14 +45,14 @@
     </div>
 
     <div class="bottom-div-home">
-       <a href="https://fit.ie"><img class="fit" src="./images/fit_black.png" alt="FIT Logo"></a>
+       <a href="https://fit.ie" target="_blank"><img class="fit" src="./images/fit_black.png" alt="FIT Logo"></a>
         <!--Copyright of www.fit.ie-->
         <h2>The Course</h2>
         <p>
             Tech companies recruit an apprentice (like me) for a 2 year programme with the assistance of <a href="http://fit.ie">FIT</a>. The first 6 months require apprentices to attend full time, off
-            the job training. This takes place in the <a href="http://www.rstc.ie">Regional Skills and Training Centre</a> in Dundalk, Co. Louth where we
-            are tutored by Dean Harrison of <a href="http://oiliuna.ie">Oiliuna</a> . The
-            next 7 - 18 months includes working at my company, <a href="http://www.intactsoftware.com">Intact,</a> for 3 days a week and then 2 days in
+            the job training. This takes place in the <a href="http://www.rstc.ie" target="_blank">Regional Skills and Training Centre</a> in Dundalk, Co. Louth where we
+            are tutored by Dean Harrison of <a href="http://oiliuna.ie" target="_blank">Oiliuna</a> . The
+            next 7 - 18 months includes working at my company, <a href="http://www.intactsoftware.com" target="_blank">Intact,</a> for 3 days a week and then 2 days in
             the RSTC. Months 19 - 24 are broken up into 4 day periods at our companies and 1 day in the RSTC. After 2 years, we then work full time as
             qualified (hopefully) software developers.
         </p>
@@ -62,10 +60,10 @@
     </div>
 
     <div class="intact">
-        <a href="https://www.intactsoftware.com"><img id="intact-logo" src="./images/intact.svg" alt="Intact Software"></a>
+        <a href="https://www.intactsoftware.com" target="_blank"><img id="intact-logo" src="./images/intact.svg" alt="Intact Software"></a>
         <h2>My Company</h2>
         <p>
-            I was very fortunate that <a href="https://www.intactsoftware.com">Intact</a> were willing to take a chance with me and employ me 
+            I was very fortunate that <a href="https://www.intactsoftware.com" target="_blank">Intact</a> were willing to take a chance with me and employ me 
             as their apprentice. They requested someone who was a complete beginner but had an interest in the world of technology and a proven track
             record of self taught learning and education. The company HQ is based in my hometown of Dundalk, Co. Louth and it has offices all across 
             Ireland and the UK. They have over 26 years experience in the field of enterprise resource planning and they supply a wide array of small and
@@ -76,9 +74,9 @@
     </div>
 
     <div class="bottom-navbar">
-        <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
-        <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
-        <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+        <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+        <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
+        <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
         
         <input id="scrollToTop" type="button" value="Top">
         <p> 
