--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
             over 14 million passwords. Below you can also see a copy of the presentation we made in front of our tutor and classmates.
         </p>
 
-        <a href="https://1drv.ms/p/s!AuBIVeU32YIOmEjG1PSS5W6PCHUg">Data Security Presentation File</a>
+        <a href="https://1drv.ms/p/s!AuBIVeU32YIOmEjG1PSS5W6PCHUg" target="_blank">Data Security Presentation File</a>
     </div>
 
     <h3>Database Programming - SQL</h3>
@@ -111,9 +111,9 @@
 
     
     <div class="bottom-navbar">
-            <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
-            <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
-            <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+            <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+            <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
+            <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
     
             <input id="scrollToTop" type="button" value="Top">
             <p> 
