--- a/portfolio.html
+++ b/portfolio.html
@@ -106,10 +106,11 @@
         </p>
     </div>
 
+    <h3>Web Workers</h3>
+    <p>Count Numbers: <output id="result"></output> </p>
+    <button onclick="startWorker()">Start Worker</button>
+    <button onclick="stopWorker()">Stop Worker</button>
 
-
-
-    
     <div class="bottom-navbar">
             <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
             <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
