Web Worker CSS, comments added

--- a/education.html
+++ b/education.html
@@ -13,6 +13,8 @@
 </head>
 
 <body>
+
+    <!-- Creates the navbar that displays on the top left of each page-->
     <div class="navbar" id="myNavbar">
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
@@ -21,6 +23,7 @@
         <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
     </div>
 
+    <!--Displays the main SVG image and simple text-->
     <div class="top-div-edu">
         <h1>Education</h1>
         <h3>The Story Thus Far...</h3>
@@ -28,15 +31,18 @@
         <!--Image from Pixabay-->
     </div>
 
+    <!--Explains the course and the grading-->
     <div class="software-div">
         <p>
             Here are my most recent results in the Software Development Apprenticeship Programme.
-            So far, we have been assessed on pseudocode, object orientated programming, the principles of ICT systems and data security
-            and web fundamentals. The grading system encompasses either a pass, merit or distinction. The course itself revolves hugely
+            So far, we have been assessed on pseudocode, object orientated programming, the principles of ICT systems
+            and data security
+            and web fundamentals. The grading system encompasses either a pass, merit or distinction. The course itself
+            revolves hugely
             around continuous assessment and examinations. Be sure to check back regularly for more exam results!
         </p>
     </div>
-
+    <!--Table used to structure my results-->
     <div>
         <h1>Software Development Apprenticeship</h1>
         <table id="software" align="center">
@@ -53,11 +59,16 @@
     <div class="undergrad-uni">
         <a href="https://www.ucd.ie/" target="_blank"><img src="./images/ucd.png" alt="UCD"></a>
         <p>
-            Before my escapades into the world of technology, I had a previous life of study and education. After completing my Leaving Cert
-            in 2011, I entered University College Dublin at 17 where I studied history, politics and international relations for the
-            next 3 years. I had a particular interest in revolutionary and paramilitary groups, both left and right on the political axis. I
-            also enjoyed studying the history of the USSR and the Eastern bloc along with the history and politics of the Middle East and
-            North Africa Region. In 2014, I graduated with a BA joint major in History Politics and International Relations. In the same year
+            Before my escapades into the world of technology, I had a previous life of study and education. After
+            completing my Leaving Cert
+            in 2011, I entered University College Dublin at 17 where I studied history, politics and international
+            relations for the
+            next 3 years. I had a particular interest in revolutionary and paramilitary groups, both left and right on
+            the political axis. I
+            also enjoyed studying the history of the USSR and the Eastern bloc along with the history and politics of
+            the Middle East and
+            North Africa Region. In 2014, I graduated with a BA joint major in History Politics and International
+            Relations. In the same year
             and institution, I enrolled in a Masters programme where I eventually graduated in 2016.
         </p>
     </div>
@@ -65,6 +76,7 @@
     <div>
         <h1>Masters</h1>
 
+        <!--Table used to structure my results-->
         <table id="masters" align="center">
             <thead>
                 <tr>
@@ -73,7 +85,7 @@
                     <th>Grade</th>
                     <th>Grade Point Average</th>
                 </tr>
-            </thead> 
+            </thead>
 
             <tbody>
 
@@ -83,6 +95,7 @@
 
     <div>
         <h1>Undergrad Year 3</h1>
+        <!--Table used to structure my results-->
         <table id="year3" align="center">
             <tr>
                 <th>Course Code</th>
@@ -95,6 +108,7 @@
 
     <div>
         <h1>Undergrad Year 2</h1>
+        <!--Table used to structure my results-->
         <table id="year2" align="center">
 
             <tr>
@@ -106,8 +120,9 @@
         </table>
     </div>
 
-    <div>          
+    <div>
         <h1>Undergrad Year 1</h1>
+        <!--Table used to structure my results-->
         <table id="year1" align="center">
 
             <tr>
@@ -117,39 +132,51 @@
                 <th>Grade Point Average</th>
             </tr>
         </table>
-    </div> 
+    </div>
 
     <div class="book-pub">
         <h1>Book Publication</h1>
-        <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1" target="_blank"> <img class="myBook" src="./images/e_book.jpg" alt="Aindriu Inglis Book Cover"></a>
+        <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1"
+            target="_blank"> <img class="myBook" src="./images/e_book.jpg" alt="Aindriu Inglis Book Cover"></a>
 
         <p>
-            My MA in political science specialised in Nationalism and Ethnic Conflict. This course enabled me to study revolutionary groups, paramilitary organisations 
-            and conflict regions in more detail. As part of my course work, I had to write a 15,000 word dissertation. My piece focused
-            primarily on the IRA and the Troubles in Northern Ireland. As you can see from my results table, I received an A- for my
-            efforts. After a short period of time, my dissertation was picked up by <a href="https://www.bookhubpublishing.com/"> Book Hub Publishing</a> based
-            in Co. Galway. The picture above is the cover for my <a href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1" target="_blank" >eBook</a> 
+            My MA in political science specialised in Nationalism and Ethnic Conflict. This course enabled me to study
+            revolutionary groups, paramilitary organisations
+            and conflict regions in more detail. As part of my course work, I had to write a 15,000 word dissertation.
+            My piece focused
+            primarily on the IRA and the Troubles in Northern Ireland. As you can see from my results table, I received
+            an A- for my
+            efforts. After a short period of time, my dissertation was picked up by <a
+                href="https://www.bookhubpublishing.com/"> Book Hub Publishing</a> based
+            in Co. Galway. The picture above is the cover for my <a
+                href="https://www.amazon.co.uk/Millennials-Insight-Republicanism-Northern-Troubles-ebook/dp/B06XRF7J49/ref=sr_1_1?keywords=aindriu+inglis&qid=1561830276&s=gateway&sr=8-1"
+                target="_blank">eBook</a>
             which is available to buy on Amazon.
         </p>
 
     </div>
 
 
-
+    <!--Displays links to my social media which is available on every page.-->
     <div class="bottom-navbar">
         <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
         <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
         <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
 
+
+        <!--Creates the button that enables users to scroll back to the top of the page by clicking the "Top" button-->
         <input id="scrollToTop" type="button" value="Top">
         <p>
             © Andrew English 2019. All rights reserved.
         </p>
     </div>
+
+    <!--Contains links to my JS scripts and libraries along with a favicon-->
     <script src="./libs/jquery.js"></script>
     <script src="./libs/jquery.csv.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/education.js"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
+
 </html>
