--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
 
 <body>
 
+    <!-- Creates the navbar that displays on the top left of each page-->
     <div class="navbar" id="myNavbar">
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
@@ -20,6 +22,7 @@
     </div>
 
 
+    <!--Displays the SVG mountain image along with a brief introduction to the website-->
     <div class="top-div-home">
         <img class="top-cloud" src="./images/black_cloud.svg" alt="Cloud">
         <!--<div>Icons made by <a href="https://www.flaticon.com/authors/simpleicon" title="SimpleIcon">SimpleIcon</a> from <a href="https://www.flaticon.com/"                 title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/"                 title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
@@ -32,62 +35,81 @@
 
 
     </div>
-
+    <!-- Displays a picture of myself along with a brief intro on the course and what I'm doing-->
     <div class="middle-div-home">
         <img class="andrew" src="./images/andrew_black.jpg" alt="Photograph of Andrew English.">
         <h2>Dia Dhuit</h2>
         <p>
-            Join me as I try and navigate through the world of programming, software development and everything in between. As a complete 
-            novice with no previous experience within the tech sector, I hope to provide an insight into a booming industry and highlight how I 
-            will eventually make your job redundant through automation! If you would like to get in contact, you can do so by clicking on any 
-            of the social media links at the bottom of the page or alternitively, you can visit my Contact page for further information.
+            Join me as I try and navigate through the world of programming, software development and everything in
+            between. As a complete
+            novice with no previous experience within the tech sector, I hope to provide an insight into a booming
+            industry and highlight how I
+            will eventually make your job redundant through automation! If you would like to get in contact, you can do
+            so by clicking on any
+            of the social media links at the bottom of the page or alternitively, you can visit my Contact page for
+            further information.
         </p>
     </div>
 
+    <!--Talks about FIT and gives users the chance to visit FIT, Oiliuna and RSTC websites-->
     <div class="bottom-div-home">
-       <a href="https://fit.ie" target="_blank"><img class="fit" src="./images/fit_black.png" alt="FIT Logo"></a>
+        <a href="https://fit.ie" target="_blank"><img class="fit" src="./images/fit_black.png" alt="FIT Logo"></a>
         <!--Copyright of www.fit.ie-->
         <h2>The Course</h2>
         <p>
-            Tech companies recruit an apprentice (like me) for a 2 year programme with the assistance of <a href="http://fit.ie">FIT</a>. The first 6 months require apprentices to attend full time, off
-            the job training. This takes place in the <a href="http://www.rstc.ie" target="_blank">Regional Skills and Training Centre</a> in Dundalk, Co. Louth where we
+            Tech companies recruit an apprentice (like me) for a 2 year programme with the assistance of <a
+                href="http://fit.ie">FIT</a>. The first 6 months require apprentices to attend full time, off
+            the job training. This takes place in the <a href="http://www.rstc.ie" target="_blank">Regional Skills and
+                Training Centre</a> in Dundalk, Co. Louth where we
             are tutored by Dean Harrison of <a href="http://oiliuna.ie" target="_blank">Oiliuna</a> . The
-            next 7 - 18 months includes working at my company, <a href="http://www.intactsoftware.com" target="_blank">Intact,</a> for 3 days a week and then 2 days in
-            the RSTC. Months 19 - 24 are broken up into 4 day periods at our companies and 1 day in the RSTC. After 2 years, we then work full time as
+            next 7 - 18 months includes working at my company, <a href="http://www.intactsoftware.com"
+                target="_blank">Intact,</a> for 3 days a week and then 2 days in
+            the RSTC. Months 19 - 24 are broken up into 4 day periods at our companies and 1 day in the RSTC. After 2
+            years, we then work full time as
             qualified (hopefully) software developers.
         </p>
 
     </div>
 
+    <!--Gives information on my comapany and a link to their website-->
     <div class="intact">
-        <a href="https://www.intactsoftware.com" target="_blank"><img id="intact-logo" src="./images/intact.svg" alt="Intact Software"></a>
+        <a href="https://www.intactsoftware.com" target="_blank"><img id="intact-logo" src="./images/intact.svg"
+                alt="Intact Software"></a>
         <h2>My Company</h2>
         <p>
-            I was very fortunate that <a href="https://www.intactsoftware.com" target="_blank">Intact</a> were willing to take a chance with me and employ me 
-            as their apprentice. They requested someone who was a complete beginner but had an interest in the world of technology and a proven track
-            record of self taught learning and education. The company HQ is based in my hometown of Dundalk, Co. Louth and it has offices all across 
-            Ireland and the UK. They have over 26 years experience in the field of enterprise resource planning and they supply a wide array of small and
-            medium businesses with their software. In laymans terms, Intact develops software that organisations and companies use to manage day-to-day business 
-            activities, such as accounting, procurement, project management, risk management and compliance, and supply chain operations. 
+            I was very fortunate that <a href="https://www.intactsoftware.com" target="_blank">Intact</a> were willing
+            to take a chance with me and employ me
+            as their apprentice. They requested someone who was a complete beginner but had an interest in the world of
+            technology and a proven track
+            record of self taught learning and education. The company HQ is based in my hometown of Dundalk, Co. Louth
+            and it has offices all across
+            Ireland and the UK. They have over 26 years experience in the field of enterprise resource planning and they
+            supply a wide array of small and
+            medium businesses with their software. In laymans terms, Intact develops software that organisations and
+            companies use to manage day-to-day business
+            activities, such as accounting, procurement, project management, risk management and compliance, and supply
+            chain operations.
         </p>
 
     </div>
 
+    <!--Displays links to my social media which is available on every page.-->
     <div class="bottom-navbar">
         <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
         <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
         <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
-        
+
+        <!--Creates the button that enables users to scroll back to the top of the page by clicking the "Top" button-->
         <input id="scrollToTop" type="button" value="Top">
-        <p> 
+        <p>
             © Andrew English 2019. All rights reserved.
         </p>
-    </div>  
+    </div>
 
 
-   
 
 
+    <!--Contains links to my JS scripts and libraries along with a favicon-->
     <script src="./libs/jquery.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
