--- a/portfolio.html
+++ b/portfolio.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
-    <link rel="icon" href="./images/favicon.ico">    
+    <link rel="stylesheet" type="text/css" href="./slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css" />
+    <link rel="icon" href="./images/favicon.ico">
 </head>
 
 <body>
 
+    <!-- Creates the navbar that displays on the top left of each page-->
     <div class="navbar" id="myNavbar">
         <a href="index.html"><i class="fas fa-home"></i>Home</a>
         <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
@@ -23,17 +24,19 @@
 
 
     </div>
-
+    <!--HTML framed in a way that enables the slick carousel library to function-->
     <div class="top-div-portfolio">
         <h1>Portfolio</h1>
         <img id="portfolio" src="./images/portfolio.svg" alt="Image of man looking into portfolio file">
 
     </div>
 
+    <!--HTML framed in a way that enables the slick carousel library to function-->
     <div class=" middle-div-portfolio">
         <h2>What I've been up to!</h2>
         <p>
-            Here's a selection of some of my recent work. It includes, tests, assignments, projects, collaborations and presentations.
+            Here's a selection of some of my recent work. It includes, tests, assignments, projects, collaborations and
+            presentations.
             Check back regularly for more updates.
         </p>
     </div>
@@ -42,21 +45,26 @@
 
     <h3>Pseudocode</h3>
     <div class="portfolio-slide">
+        <!--HTML framed in a way that enables the slick carousel library to function-->
         <div class="pseudo">
             <div><img id="pseudo1" src="./images/pseudo_1.JPG" alt="Copy of Pseudocode test"></div>
             <div><img id="pseudo2" src="./images/pseudo_2.JPG" alt="Copy of Pseudocode test"> </div>
         </div>
 
         <p id="pseudo-para">
-            This was the first test I had during the programme. Learning a new language with C# was difficult enough never mind trying to
-            get to grips with Pseudocode. After several attempts and a crash course on Pseudocode lingo, I eventually got the hang of it
-            and understood why this is such an important part in the planning stage of writing clear and concise code. Togehter with one of my 
+            This was the first test I had during the programme. Learning a new language with C# was difficult enough
+            never mind trying to
+            get to grips with Pseudocode. After several attempts and a crash course on Pseudocode lingo, I eventually
+            got the hang of it
+            and understood why this is such an important part in the planning stage of writing clear and concise code.
+            Togehter with one of my
             classmates, we produced the Pseudocode you can see above.
         </p>
     </div>
 
     <h3>Basic Object Oriented Programming with C#</h3>
     <div class="c-sharp-slide">
+        <!--HTML framed in a way that enables the slick carousel library to function-->
         <div class="c-sharp">
             <div><img src="./images/holiday_gui.JPG" alt="Image of Holiday GUI"></div>
             <div><img src="./images/holiday_code1.JPG" alt="Holiday Code"></div>
@@ -65,25 +73,35 @@
         </div>
 
         <p class="c-sharp-para">
-            The C# examination was one of hardest exams I've done in all my years of education. Despite being well prepared, it was unlike any other
-            exam I've ever sat. Throughout the module, we became accustomed with classes, methods and functions. We worked through for loops, arrays
-            and if statements. The funny thing is, we've only scratched the surface of this hugely powerful language. In semester 2, we delve further
-            into the world of C# and Object Oriented Programming. The photos above are from a practice test I did for our exam earlier in the year.
+            The C# examination was one of hardest exams I've done in all my years of education. Despite being well
+            prepared, it was unlike any other
+            exam I've ever sat. Throughout the module, we became accustomed with classes, methods and functions. We
+            worked through for loops, arrays
+            and if statements. The funny thing is, we've only scratched the surface of this hugely powerful language. In
+            semester 2, we delve further
+            into the world of C# and Object Oriented Programming. The photos above are from a practice test I did for
+            our exam earlier in the year.
         </p>
     </div>
 
 
     <h3>Principles of ICT Systems and Data Security</h3>
     <div class="data-slide">
-
-        <iframe  src="https://www.youtube.com/embed/EIq0J7Sr7eo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <!-- Used an iframe as the video file was too large for the website. Let youtube do that work instead-->
+        <iframe src="https://www.youtube.com/embed/EIq0J7Sr7eo" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <p class="data">
-            Whilst not a programming module per se, I found this module hugely beneficial on many fronts. Discussing areas surrounding
-            malware, encryption and data security is not only beneficial for work place environments, but also in every day aspects of our lives.
-            As a class, we were afforded the opportunity to work together and make presentations on various topics. My classmate Bryan Donnelly and
-            I presented on encryption and hash functions. From the video you can see above, we demonstrated the process of a dictionary attack on
-            over 14 million passwords. Below you can also see a copy of the presentation we made in front of our tutor and classmates.
+            Whilst not a programming module per se, I found this module hugely beneficial on many fronts. Discussing
+            areas surrounding
+            malware, encryption and data security is not only beneficial for work place environments, but also in every
+            day aspects of our lives.
+            As a class, we were afforded the opportunity to work together and make presentations on various topics. My
+            classmate Bryan Donnelly and
+            I presented on encryption and hash functions. From the video you can see above, we demonstrated the process
+            of a dictionary attack on
+            over 14 million passwords. Below you can also see a copy of the presentation we made in front of our tutor
+            and classmates.
         </p>
 
         <a href="https://1drv.ms/p/s!AuBIVeU32YIOmEjG1PSS5W6PCHUg" target="_blank">Data Security Presentation File</a>
@@ -91,6 +109,7 @@
 
     <h3>Database Programming - SQL</h3>
     <div class="sql-slide">
+        <!--HTML framed in a way that enables the slick carousel library to function-->
         <div class="sql">
             <div><img src="./images/test_1.PNG" alt="SQL Test No1"></div>
             <div><img src="./images/test_2.PNG" alt="SQL Test No10"></div>
@@ -99,36 +118,52 @@
         </div>
 
         <p>
-            With the SQL database module, we learned how to navigate throguh a relatively small database using commands such as "SELECT", "WHERE,
-            "IN", "FROM" and "TO". We also became accustomed with inner joins and nested selects too. I really enjoyed this module and I look forward
-            to the semester 2 database module where we go a little bit more in depth in relation to how databases are actally created. The photos above
+            With the SQL database module, we learned how to navigate throguh a relatively small database using commands
+            such as "SELECT", "WHERE,
+            "IN", "FROM" and "TO". We also became accustomed with inner joins and nested selects too. I really enjoyed
+            this module and I look forward
+            to the semester 2 database module where we go a little bit more in depth in relation to how databases are
+            actally created. The photos above
             are snippet coppies of the SQL database exam we had earlier this year.
         </p>
     </div>
 
-    <h3>Web Workers</h3>
-    <p>Count Numbers: <output id="result"></output> </p>
-    <button onclick="startWorker()">Start Worker</button>
-    <button onclick="stopWorker()">Stop Worker</button>
+    <h3>Web Worker</h3>
 
+    <div class="webWorker">
+        <!--This displays the numbers counter as the web worker operates-->
+        <h4>Count Numbers: <output id="result"></output></h4>
+
+        <p>
+            Above is a demonstration of a simple web worker as required for the web assignment submission. Normally web
+            workers aren’t used for such simple
+            scripts, but for more CPU intensive tasks.
+        </p>
+
+        <!--Creates the start and stop button for the web worker.-->
+        <button class="webButton" onclick="startWorker()">Start Worker</button>
+        <button class="webButton" onclick="stopWorker()">Stop Worker</button>
+    </div>
+
+    <!--Displays links to my social media which is available on every page.-->
     <div class="bottom-navbar">
-            <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
-            <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
-            <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
-    
-            <input id="scrollToTop" type="button" value="Top">
-            <p> 
-                © Andrew English 2019. All rights reserved.
-            </p>
-    </div>  
+        <a href="https://www.linkedin.com/in/aenglish1" target="_blank"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+        <a href="https://github.com/aindriu18" target="_blank"><i class="fab fa-github-square"></i>Github</a>
+        <a href="https://twitter.com/AndrewEnglish18" target="_blank"><i class="fab fa-twitter-square"></i>Twitter</a>
 
+        <!--Creates the button that enables users to scroll back to the top of the page by clicking the "Top" button-->
+        <input id="scrollToTop" type="button" value="Top">
+        <p>
+            © Andrew English 2019. All rights reserved.
+        </p>
+    </div>
+
+    <!--Contains links to my JS scripts and libraries along with a favicon-->
     <script src="./libs/jquery.js"></script>
-    <script type="text/javascript" src="./slick/slick.js"></script>    
+    <script type="text/javascript" src="./slick/slick.js"></script>
     <script src="./scripts/script.js"></script>
     <script src="./scripts/portfolio.js"></script>
     <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
 </html>
-
-
