--- a/contact.html
+++ b/contact.html
@@ -2,88 +2,97 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Contact Details</title>
-    <link rel="stylesheet" href="./css/styles.css">
-    <link rel="stylesheet" href="./css/parsley.css">
-    <link rel="icon" href="./images/favicon.ico">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Contact Details</title>
+  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/parsley.css">
+  <link rel="icon" href="./images/favicon.ico">
 </head>
 
 <body>
 
 
-
-    <div class="navbar" id="myNavbar">
-        <a href="index.html"><i class="fas fa-home"></i>Home</a>
-        <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
-        <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
-        <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
-        <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
-
-
-    </div>
+  <!-- Creates the navbar that displays on the top left of each page-->
+  <div class="navbar" id="myNavbar">
+    <a href="index.html"><i class="fas fa-home"></i>Home</a>
+    <a href="education.html"><i class="fas fa-graduation-cap"></i>Education</a>
+    <a href="portfolio.html"><i class="fas fa-folder-open"></i>Portfolio</a>
+    <a href="contact.html"><i class="fas fa-address-book"></i>Contact</a>
+    <a href="javascript:void(0);" class="icon"><i class="fas fa-bars"></i></a>
 
 
-    <div class="top-contact">
-        <h1>Contact Details</h3>
-            <p>If you would like to get in touch, you can fill in the form below. Otherwise, you can visit me in the
-                training centre.
-                Tips, tricks and recommendations are always welcome!
-            </p>
-    </div>
+  </div>
 
 
-    <div class="container">
-        <div class="row">
-          <div id="map" class="column">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18763.120042527808!2d-6.3746195!3d53.9958527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7794d2bbeb48f5e1!2sRSTC+Regional+Skills+%26+Training+Centre!5e0!3m2!1sen!2sie!4v1562232816049!5m2!1sen!2sie"
-                width="100%" height="400" frameborder="0" style="border:0" allowfullscreen>
-            </iframe>
-          </div>
-          <div class="column">
-            <form id="contact-form" enctype="text/plain" action="mailto:aindriuinglis@gmail.com" method="POST">
-              <label for="fname">First Name</label>
-              <input type="text" id="fname" name="firstname" placeholder="Your name.." data-parsley-type="alphanum" data-parsley-required="true">
-              <label for="lname">Last Name</label>
-              <input type="text" id="lname" name="lastname" placeholder="Your last name.." data-parsley-required="true">
-              <label for="country">Country</label>
-              <select id="country" name="country">
-                  <option value="ireland">Ireland</option>
-                <option value="australia">Australia</option>
-                <option value="canada">Canada</option>
-                <option value="uk">UK</option>
-                <option value="usa">USA</option>
-                <option value="europe">Rest of Europe</option>
-                <option value="world">Rest of World</option>
-              </select>
-              <label for="subject">Subject</label>
-              <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px" data-parsley-required="true"></textarea>
-              <input type="submit" value="Submit">
-            </form>
-          </div>
-        </div>
+  <div class="top-contact">
+    <h1>Contact Details</h3>
+      <p>If you would like to get in touch, you can fill in the form below. Otherwise, you can visit me in the
+        training centre.
+        Tips, tricks and recommendations are always welcome!
+      </p>
+  </div>
+
+
+  <div class="container">
+    <div class="row">
+      <div id="map" class="column">
+        <!--Displays Google maps with a link to the RTSC-->
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d18763.120042527808!2d-6.3746195!3d53.9958527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7794d2bbeb48f5e1!2sRSTC+Regional+Skills+%26+Training+Centre!5e0!3m2!1sen!2sie!4v1562232816049!5m2!1sen!2sie"
+          width="100%" height="400" frameborder="0" style="border:0" allowfullscreen>
+        </iframe>
       </div>
-
-   </div>
-
-    <div class="bottom-navbar">
-        <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
-        <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
-        <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
-
-        <input id="scrollToTop" type="button" value="Top">
-        <p>
-            © Andrew English 2019. All rights reserved.
-        </p>
+      <div class="column">
+        <!--Creates a form that can send me information to my personal email.-->
+        <form id="contact-form" enctype="text/plain" action="mailto:aindriuinglis@gmail.com" method="POST">
+          <!-- Form asks for identifying information-->
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" name="firstname" placeholder="Your name.." data-parsley-type="alphanum"
+            data-parsley-required="true">
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" name="lastname" placeholder="Your last name.." data-parsley-required="true">
+          <label for="country">Country</label>
+          <!--Gives users the option to select where they are from-->
+          <select id="country" name="country">
+            <option value="ireland">Ireland</option>
+            <option value="australia">Australia</option>
+            <option value="canada">Canada</option>
+            <option value="uk">UK</option>
+            <option value="usa">USA</option>
+            <option value="europe">Rest of Europe</option>
+            <option value="world">Rest of World</option>
+          </select>
+          <label for="subject">Subject</label>
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"
+            data-parsley-required="true"></textarea>
+          <!--Parsley used to validate the form-->
+          <input type="submit" value="Submit">
+        </form>
+      </div>
     </div>
+  </div>
 
-    <script src="./libs/jquery.js" target="_blank"></script>
-    <script src="./libs/parsley.js" target="_blank"></script>
-    <script src="./scripts/script.js" target="_blank"></script>
-    <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
+  </div>
+  <!--Displays links to my social media which is available on every page.-->
+  <div class="bottom-navbar">
+    <a href="https://www.linkedin.com/in/aenglish1"><i class="fab fa-linkedin"></i></i>LinkedIn</a>
+    <a href="https://github.com/aindriu18"><i class="fab fa-github-square"></i>Github</a>
+    <a href="https://twitter.com/AndrewEnglish18"><i class="fab fa-twitter-square"></i>Twitter</a>
+
+    <!--Creates the button that enables users to scroll back to the top of the page by clicking the "Top" button-->
+    <input id="scrollToTop" type="button" value="Top">
+    <p>
+      © Andrew English 2019. All rights reserved.
+    </p>
+  </div>
+
+  <!--Contains links to my JS scripts and libraries along with a favicon-->
+  <script src="./libs/jquery.js" target="_blank"></script>
+  <script src="./libs/parsley.js" target="_blank"></script>
+  <script src="./scripts/script.js" target="_blank"></script>
+  <script src="https://kit.fontawesome.com/8fa5dfe2e3.js"></script>
 </body>
 
 </html>
